force-app/main/default/objects/Message__c/fields/CC_User__c.field-meta.xml
<CustomField>
    <fullName>CC_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CC User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Messages2</relationshipName>
    <type>Lookup</type>
</CustomField>