force-app/main/default/objects/Message__c/fields/To_Address_Type__c.field-meta.xml
<CustomField>
    <fullName>To_Address_Type__c</fullName>
    <label>To Address Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>All PMOs</fullName>
            </value>
            <value>
                <fullName>All Investigators</fullName>
            </value>
            <value>
                <fullName>All CMOs</fullName>
            </value>
            <value>
                <fullName>All Program Members</fullName>
            </value>
            <value>
                <fullName>All QAs</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>